@@ -60,6 +60,7 @@ export(initialize_emr_tables)
 export(interval)
 export(list_allergy)
 export(list_appointments)
+export(list_asthma_details)
 export(list_contact_15plus)
 export(list_contact_45_74)
 export(list_contact_65plus)
